--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 sample_submission.csv
 cleaned_abstracts.csv
+catboost_info/catboost_training.json
+catboost_info/learn_error.tsv
+catboost_info/learn/events.out.tfevents
+catboost_info/time_left.tsv
